@@ -18,6 +18,7 @@ PHP                                                                        NEWS
   . Fixed bug #72809 (Locale::lookup() wrong result with canonicalize option).
     (cmb)
   . Fixed bug #68471 (IntlDateFormatter fails for "GMT+00:00" timezone). (cmb)
+  . Fixed bug #74264 (grapheme_strrpos() broken for negative offsets). (cmb)
 
 - OpenSSL:
   . Fixed bug #52093 (openssl_csr_sign truncates $serial). (cmb)
